終於完成啦!!!!!
1.調整整體版型
2.調整背景顏色
3.文字細節調整

--- a/作業_youtube切版.html
+++ b/作業_youtube切版.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/all.min.css">
-    <title>hw_yotube</title>
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap" rel="stylesheet"><title>hw_yotube</title>
 </head>
 
 <body>
@@ -63,7 +65,7 @@
                     <p>&emsp;更多 YOUTUBE 功能</p>
                     <li><p>&emsp;<i class="fab fa-youtube"></i>&emsp;Youtube Premium</p></li>
                     <li><p>&emsp;<i class="fas fa-gamepad"></i>&emsp;遊戲</p></li>
-                    <li><p>&emsp;<i class="fas fa-podcast"></i>&emsp;直播</p></li>
+                    <li><p>&emsp;<i class="fas fa-podcast"></i>&emsp; 直播</p></li>
                     <li><p>&emsp;<i class="fas fa-trophy"></i>&emsp;體育</p></li>
                 </ul>                
             </li><hr>
@@ -118,10 +120,14 @@
                 <li id="header_middle">
                     <div id="searchBlank">                        
                         <!-- 搜尋欄 -->
-                        <input type="text" placeholder="搜尋" style="outline: none; height: 26px;">
-                        <button><i class='fas fa-search icon'></i></button>
-                        <!-- 麥克風 -->                            
-                        <a href="" class="micro"><i class="fas fa-microphone icon"></i></a>
+                        <div class="textBox">
+                            <input type="text" placeholder="搜尋" style="height: 26px; width:500px; border: 0.5px solid rgba(128, 128, 128, 0.425);">
+                            <button><i class='fas fa-search icon' style="color: rgb(129, 129, 129); font-size:13px"></i></button>
+                            <!-- 麥克風 -->
+                            <div  class="micro">                          
+                                <a href=""><i class="fas fa-microphone icon" style="color: rgb(109, 104, 104);"></i></a>
+                            </div>  
+                        </div>
                     </div>
                 </li>
                 <!--右----------------->
@@ -186,7 +192,9 @@
                                         <img src="https://yt3.ggpht.com/ytc/AAUvwnjq2tlDb4Pyp2678yOO69GsQWuUvZE6By7CjgsQOw=s88-c-k-c0x00ffffff-no-rj" alt="">
                                     </div>
                                     <div class="box_title">
-                                        <p class="name">Aimer「wonderland」MUSIC VIDEO</p><br>
+                                        <div class="box_main_title">
+                                            <p class="name">Aimer「wonderland」MUSIC VIDEO</p><br>
+                                        </div>
                                         <p class="sideName">Aimer Official YouTube Channel&nbsp;<img src="./images/melody.png" alt="" style="height:13px; width:auto"></p>
                                         <p class="sideName">觀看次數：297萬次 • 6天前</p>
                                     </div>
@@ -195,7 +203,7 @@
                         </a>                            
                     </div>
                     <div class="box">
-                        <a href="https://www.youtube.com/watch?v=F-LH1A3bwlA">
+                        <a href="https://www.youtube.com/watch?v=Ajr18Yw5xdY">
                             <div class="box_bigImg">
                                 <img src="https://i.ytimg.com/vi/Ajr18Yw5xdY/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCedgQLtC1_Mn0-QtRRQS-YKH_vSQ" alt="">
                             </div>
@@ -226,7 +234,9 @@
                                         <img src="https://yt3.ggpht.com/ytc/AAUvwniPQyYwJ623jhIQnSlBtmIKpp3MeJY7d6lfQcUbQw=s88-c-k-c0x00ffffff-no-rj" alt="">
                                     </div>
                                     <div class="box_title">
-                                        <p class="name">Birdy - Surrender [Official Video]</p><br>
+                                        <div class="box_main_title">
+                                            <p class="name">Birdy - Surrender [Official Video]</p><br>
+                                        </div>
                                         <p class="sideName">Birdy&nbsp;<img src="./images/melody.png" alt="" style="height:13px; width:auto"></p>
                                         <p class="sideName">觀看次數：161萬次 • 3個月前</p>
                                     </div>
@@ -245,7 +255,9 @@
                                         <img src="https://yt3.ggpht.com/ytc/AAUvwnjT5006ntjcDeWIbN4OXrwHDlJlMJAlqkZ7W0gS2Q=s68-c-k-c0x00ffffff-no-rj" alt="">
                                     </div>
                                     <div class="box_title">
-                                        <p class="name">【HD】周深 - 大魚《大魚海棠》</p><br>
+                                        <div class="box_main_title">
+                                            <p class="name">【HD】周深 - 大魚《大魚海棠》</p><br>
+                                        </div>
                                         <p class="sideName">BELLA PING MUSIC CHANNEL</p>
                                         <p class="sideName">觀看次數：2183萬次 • 4年前</p>
                                     </div>
@@ -265,7 +277,9 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwnij1AZhKEsHkhKBISM0yntjRyNKAPOTp90MdgaE=s68-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">BELLE (2021) - 70 Second Trailer [HQ]</p><br>
+                                            <div class="box_main_title">
+                                                <p class="name">BELLE (2021) - 70 Second Trailer [HQ]</p><br>
+                                            </div>
                                             <p class="sideName">スタジオ地図 / STUDIO CHIZUl</p>
                                             <p class="sideName">觀看次數：142萬次 • 2週前</p>
                                         </div>
@@ -284,7 +298,9 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwnhvvH2y051ER3Z_TiU-1CKQhoDJXXxhMUVoeMXo=s88-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">Joe Hisaishi - Labyrinth of Eden</p><br>
+                                            <div class="box_main_title">
+                                                <p class="name">Joe Hisaishi - Labyrinth of Eden</p><br>
+                                            </div>
                                             <p class="sideName">Joe Hisaishi Official &nbsp;<img src="./images/melody.png" alt="" style="height:13px; width:auto"></p>
                                             <p class="sideName">觀看次數：7.1萬次 • 2週前</p>
                                         </div>
@@ -303,7 +319,9 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwnhsRcGv0u95GilHF8GcHtX21i1rKli6mpOfK8pl=s68-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">【古琴Guqin】《修禊吟》一琴一咏，畅叙幽情</p><br>
+                                            <div class="box_main_title">
+                                                <p class="name">【古琴Guqin】《修禊吟》一琴一咏，畅叙幽情</p><br>
+                                            </div>
                                             <p class="sideName">自得琴社 Zi De Guqin Studio</p>
                                             <p class="sideName">觀看次數：3.6萬次 • 2週前</p>
                                         </div>
@@ -322,7 +340,9 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwnjYb9r3D3Qo-VYvgDp445_77-w3FOXf4mBAgrDXLg=s88-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">守夜人 Night Keepers【 我睡不著 I Can't Sleep 】 </p><br>
+                                            <div class="box_main_title">
+                                                <p class="name">守夜人 Night Keepers【 我睡不著 I Can't Sleep 】</p><br>
+                                            </div>
                                             <p class="sideName">Night Keepers&nbsp;<img src="./images/melody.png" alt="" style="height:13px; width:auto"></p>
                                             <p class="sideName">觀看次數：417萬次 • 1年前</p>
                                         </div>
@@ -343,8 +363,10 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwngynDwPUNRL7xCU8IbuyJ7qAdp_Bz4okzlz9PbItw=s68-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">Heaven on Their Minds: Prague Cello Quartet [Official video]</p><br>
-                                            <p class="sideName">Prague Cello Quartet</p>
+                                            <div class="box_main_title">
+                                                <p class="name">Heaven on Their Minds: Prague Cello Quartet [Official video]</p><br>
+                                            </div>
+                                                <p class="sideName">Prague Cello Quartet</p>
                                             <p class="sideName">觀看次數：4萬次 • 1個月前</p>
                                         </div>
                                     </a>
@@ -362,7 +384,9 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwng3FxqXlVFPgVuPFc4yqk2RHz1dtHpNQP7LbjXy=s176-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">Merry go round of life Howl's moving catsle OST for Meow</p><br>
+                                            <div class="box_main_title">
+                                                <p class="name">Merry go round of life Howl's moving catsle OST for Meow</p><br>
+                                            </div>
                                             <p class="sideName">Haburu</p>
                                             <p class="sideName">觀看次數：414萬次 • 11個月前</p>
                                         </div>
@@ -381,7 +405,9 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwnjb4XbQvjcyASaYHKAupX0TsIjmP8gAWQtSUkTY=s68-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">The Girl from the Other Side official trailer</p><br>
+                                            <div class="box_main_title">
+                                                <p class="name">The Girl from the Other Side official trailer</p><br>
+                                            </div>
                                             <p class="sideName">Production I.G Official Channel</p>
                                             <p class="sideName">觀看次數：94萬次 • 1年前</p>
                                         </div>
@@ -400,7 +426,9 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwngM3K3Wa46ArwwU7vHDuFfISpS92NK4hH-NwEdI=s68-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">【MAD】トキヲ・ファンカ【モノノ怪】</p><br>
+                                            <div class="box_main_title">
+                                                <p class="name">【MAD】トキヲ・ファンカ【モノノ怪】</p><br>
+                                            </div>
                                             <p class="sideName">ムパ</p>
                                             <p class="sideName">觀看次數：98萬次 • 1年前</p>
                                         </div>
@@ -421,7 +449,9 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwnihmQ5Oaotj7Sfh4GUo0GnkdAZA7NYKoDPLon6jDQ=s68-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">二戰義大利變成豬隊友的真正原因 ▶ 義大利:不是我的錯</p><br>
+                                            <div class="box_main_title">
+                                                <p class="name">二戰義大利變成豬隊友的真正原因 ▶ 義大利:不是我的錯</p><br>
+                                            </div>
                                             <p class="sideName">cheap</p>
                                             <p class="sideName">觀看次數：9萬次 • 13小時前</p>
                                         </div>
@@ -440,7 +470,9 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwngFCKugZwen-81xq0K_0tSU6HQZsvjQ26xsQzO7zg=s68-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">Floating Action Menu Using Html CSS & Javascript</p><br>
+                                            <div class="box_main_title">
+                                                <p class="name">Floating Action Menu Using Html CSS & Javascript</p><br>
+                                            </div>
                                             <p class="sideName">Online Tutorials</p>
                                             <p class="sideName">觀看次數：3899次 • 3小時前</p>
                                         </div>
@@ -449,7 +481,7 @@
                             </a>                            
                         </div>
                         <div class="box">
-                            <a href="https://www.youtube.com/channel/UCmMnzrvnsSnv-0u9M1Rxiqw">
+                            <a href="https://www.youtube.com/watch?v=rDueUyDlEMI">
                                 <div class="box_bigImg">
                                     <img src="https://i.ytimg.com/vi/rDueUyDlEMI/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLA_mGPDO0J1NxSUU-Kjexwxpdq2lg" alt="">
                                 </div>
@@ -459,7 +491,9 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwniSnrTpU6FDgBwrZ2EBSS4lskgf6KUhxdQNVXkN=s68-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">全球聚焦王子落難記！約旦宮鬥劇攤在陽光下</p><br>
+                                            <div class="box_main_title">
+                                                <p class="name">全球聚焦王子落難記！約旦宮鬥劇攤在陽光下</p><br>
+                                            </div>
                                             <p class="sideName">TODAY 看世界</p>
                                             <p class="sideName">觀看次數：4.3萬次 • 1週前</p>
                                         </div>
@@ -478,10 +512,12 @@
                                             <img src="https://yt3.ggpht.com/ytc/AAUvwnhdOOblNED7khwBdJ5vjc4YoPF78HKlmZIhpcEM=s68-c-k-c0x00ffffff-no-rj" alt="">
                                         </div>
                                         <div class="box_title">
-                                            <p class="name">這是能讓你感受到「徹骨寒意」的遊戲〖遊戲不止〗</p><br>
-                                            <p class="sideName">森纳映画</p>
-                                            <p class="sideName">觀看次數：16萬次 • 1天前</p>
-                                        </div>
+                                            <div class="box_main_title">
+                                                <p class="name">這是能讓你感受到「徹骨寒意」的遊戲〖遊戲不止〗</p><br>
+                                            </div>
+                                                <p class="sideName">森纳映画</p>
+                                                <p class="sideName">觀看次數：16萬次 • 1天前</p>
+                                            </div>
                                     </a>
                                 </div>
                             </a>                            
